--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://moabe:123456luis@laudo-medico.zon5fkt.mongodb.net/laudo-medico_db?retryWrites=true&w=majority&appName=laudo-medico
 PORT=3333
+SALT_ROUNDS=10
