--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
+    "eslint": "^8.57.1",
     "nodemon": "^3.1.10"
   }
 }
