fix: add varsIgnorePattern to no-unused-vars rule in ESLint configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,6 @@
     "@rocketseat/eslint-config/node"
   ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }]
   }
 }
